# Conversor-de-Archivos

./: AGENTS.md  LICENSE  README.md  build.spec  main.py  pyproject.toml
.github/workflows/: build.yml
conversor/converters/: audio.py  base.py  documents.py  images.py  video.py
conversor/core/: engine.py  registry.py  validation.py  validators.py
conversor/ui/: app.py  file_panel.py  history_window.py  log_viewer.py  options_panel.py  preview_panel.py  progress_panel.py  settings_window.py  themes.py  update_dialog.py
conversor/utils/: config.py  ffmpeg_check.py  file_utils.py  logger.py  update_checker.py  windows_integration.py  zip_utils.py
installer/: conversor.iss
tests/: conftest.py
tests/fixtures/: generate_samples.py
tests/fixtures/sample_files/documents/: sample.csv  sample.docx  sample.html  sample.pptx  sample.rtf  sample.txt  sample.xlsx  sample_images.docx  sample_tables.docx
tests/integration/: test_document_conversions.py
tests/unit/converters/: test_documents.py
tests/unit/ui/: test_ui_components.py
tests/unit/utils/: test_config.py  test_ffmpeg_check.py  test_update_checker.py
